--- a/src/dicoSynTag/Codes/PHP/Test/index.html
+++ b/src/dicoSynTag/Codes/PHP/Test/index.html
@@ -7,7 +7,7 @@
     <h1 style="text-align:center; font-style: italic;">TP3</h1>
     <!-- Ex1 -->
     <form ACTION="./index.php" METHOD="POST" style="margin:10px">
-    What is word that you want synonyms for ?
+    What is word that you want synonyms ?
     <INPUT TYPE="TEXT" NAME="WORDTOSEARCH" SIZE="20" MAXSIZE="50" PLACEHOLDER="Word to search" AUTOCOMPLETE="off">
     <!-- value="{{name}} €" ng-bind="name" > --><BR><hr><br>
     VALIDER ? 
