--- a/src/V2_code/index.html
+++ b/src/V2_code/index.html
@@ -48,20 +48,35 @@
         button:hover {
             background-color: #45a049;
         }
+        h2{
+            color: #45a049;
+        }
     </style>
 </head>
 
 <body>
     <h1>Tester le code PHP</h1>
-
+    <hr>
+    <h2>Simuler la suggestion d'événement</h2>
     <!-- Formulaire avec champ pour saisir l'ID de l'utilisateur -->
-    <form action="test_script.php" method="post">
+    <form action="main.php" method="post">
         <label for="idUser">ID de l'utilisateur :</label>
         <input type="text" id="idUser" name="idUser" required>
         <button type="submit" name="action" value="afficherRecommandations">Afficher les événements recommandés</button>
     </form>
-
+    <hr>
+    <h2>Créer un Utilisateur</h2>
+    <!-- Formulaire avec champ pour saisir l'inscription d'un utilisateur -->
+    <form action="main.php" method="post">
+        <button type="submit" name="action" value="creerUtilisateur">Création d'un utilisateur</button>
     </form>
+    <hr>
+    <h2>Créer un Evenement</h2>
+    <!-- Formulaire avec champ pour saisir l'inscription d'un utilisateur -->
+    <form action="main.php" method="post">
+        <button type="submit" name="action" value="creerEvenement">Création d'un événement</button>
+    </form>
+
 
 </body>
 
